# sprite_fight

./: :w  Cargo.toml  README.md  \
assets/: sprites.xcf
assets/maps/: small_house.csv  small_house.tmx
assets/xcf/: sprites.xcf
src/: astar.rs  components.rs  config.rs  entitys.rs  font_utils.rs  fov.rs  game_map.rs  initialize.rs  lib.rs  render.rs  scenes.rs  sprite_set.rs  tileset.rs
src/map_gen/: basic_dungeon.rs  generator.rs  mod.rs
src/path_finding/: astar.rs
src/systems/: ai_system.rs  input_system.rs  mod.rs  move_system.rs
