[package]
name = "sprite_fight"
version = "0.1.0"
authors = ["chrisrhayden <chrisrhayden@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_enum = "0.5.0"
sdl2 = {version = "0.34.2", features = ["image", "ttf"]}
rand = "0.7.3"
rusttype = {version = "0.9.2", features = ["gpu_cache"]}
unicode-normalization = "0.1.13"
